Kitapççık olusturuldu, yeni bir model ile egitildi.

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://azracopur@localhost:5432/notegenie_db
+DATABASE_URL=postgresql://cerenmertoglu@127.0.0.1:5433/notegenie_db
